fix(QA): :bug: Fix bug where font changes color on iphone

--- a/src/components/QA/Accordion/Accordion.module.scss
+++ b/src/components/QA/Accordion/Accordion.module.scss
@@ -66,11 +66,17 @@
       max-width: 600px;
       text-transform: uppercase;
       font-weight: bolder;
+      color: $on-surface;
+    }
+
+    span {
+      color: $on-surface;
     }
   }
   
   &__icon {
     @include font-size(12);
+    color: $on-surface;
   }
   
   &__item-content {
@@ -87,6 +93,7 @@
       padding: 1rem 0;
       @include font-size(10);
       line-height: 1.5;
+      color: $on-surface;
     }
   }
 }
